# npa-core

./: .gitignore  AGENTS.md  CONTRIBUTING.md  Cargo.toml  README.md
crates/npa-api/: Cargo.toml  build.rs
crates/npa-api/examples/: bench_package_verifier.rs  probe_reference_modules.rs  validate_checker_raw.rs
crates/npa-api/src/: adapter.rs  advanced_ai.rs  ai_search.rs  barrier_audit.rs  callable.rs  claim_publication_gate.rs  complexity_obligation.rs  counterexample_gate.rs  current.rs  diagnostic.rs  encoding_audit.rs  experiment_artifact.rs  fast_loop_measurement.rs  human.rs  human_ide.rs  independent_checker.rs  json.rs  lib.rs  library_growth.rs  p_vs_np_campaign.rs  package_artifact_ledger.rs  package_artifacts.rs  package_verifier.rs  parent_proof_integration.rs  performance_gate.rs  performance_measurement.rs  projection.rs  prompt.rs  proof_hole_scheduler.rs  proof_semantic.rs  proof_skeleton.rs  proof_sketch.rs  renderer.rs  replay.rs  research_dag.rs  research_evidence.rs  research_notebook.rs  research_target.rs  research_variant.rs  route_package.rs  (+11 more)
crates/npa-api/tests/: no_numbered_phase_strings.rs  package_artifact_ledger.rs  proof_acceptance_negative.rs  true_batching_legacy_oracle.tsv
crates/npa-cli/: Cargo.toml
crates/npa-cli/examples/: inspect_ext_v0_3_policy.rs  inspect_ext_v0_5_policy.rs  verify_ext_v0_3_facade.rs  verify_ext_v0_5_facade.rs
crates/npa-cli/src/: agent_adapter.rs  args.rs  checker_ext_toolchain_evidence.rs  diagnostic.rs  fs.rs  generated_artifact_writer.rs  governance_writer.rs  lib.rs  main.rs  package.rs  package_api.rs  package_artifact_ledger.rs  package_artifacts.rs  package_axiom_report.rs  package_build.rs  package_candidate_metadata.rs  package_check.rs  package_export_summary.rs  package_gate_plan.rs  package_hashes.rs  package_high_trust.rs  package_index.rs  package_l2_acceptance.rs  package_l2_acceptance_aggregate.rs  package_l2_namespace_transport.rs  package_l2_review_input.rs  package_lock.rs  package_promotion_materialization_validate.rs  package_promotion_materialize.rs  package_promotion_prepare.rs  package_promotion_prepare_declaration.rs  package_promotion_registry.rs  package_promotion_transaction.rs  package_publish.rs  package_refactor_plan.rs  package_theorem_premise_report.rs  package_verify.rs  release_manifest.rs  timing.rs
crates/npa-cli/tests/: agent_adapter.rs  checker_ext_toolchain_evidence.rs  package_api_v1.rs  package_artifact_ledger.rs  package_axiom_report.rs  package_check.rs  (+23 more)
(+357 files in other folders)
