[package]
name = "npa-cli"
version = "0.2.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
default-run = "npa"

[[bin]]
name = "npa"
path = "src/main.rs"

[dependencies]
libc = "0.2"
npa-api = { path = "../npa-api" }
npa-cert = { path = "../npa-cert" }
npa-frontend = { path = "../npa-frontend" }
npa-package = { path = "../npa-package" }
toml_edit = "0.22"
